templates/api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chainwatch-api-server
  namespace: chainwatch
  labels:
    app: chainwatch-api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chainwatch-api-server
  template:
    metadata:
      labels:
        app: chainwatch-api-server
    spec:
      containers:
      - name: chainwatch-api-server
        image: openworklabs/chainwatch-api-server:0.1.0
