templates/api-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: chainwatch-api-svc
  namespace: chainwatch
spec:
  selector:
    app: chainwatch-api-server
  ports:
    - port: 8080 # Default port for image
