templates/api-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chainwatch-api-ingress
  namespace: chainwatch
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: chainwatch.openworklabs.com
    http:    
      paths:
        - path: /
          backend:
            serviceName: chainwatch-api-svc
            servicePort: 8080
